# sigil

sigil/: Anchor.toml  Cargo.toml
sigil/app/: package-lock.json  package.json
sigil/app/src/: index.ts  metadao.ts  test-metadao.ts
sigil/programs/sigil/: Cargo.toml
sigil/programs/sigil/src/: constants.rs  lib.rs
sigil/scoring-function/host/: Cargo.toml
sigil/scoring-function/host/src/: main.rs
sigil/scoring-function/methods/guest/: Cargo.toml
sigil/scoring-function/methods/guest/src/: main.rs
sigil/tests/: sigil.ts
sigil/vk-extractor/: Cargo.toml
sigil/vk-extractor/src/: main.rs  main.rsY
