[package]
name = "vk-extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vk-extractor"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "3.0.5", features = ["prove"] }
hex = "0.4"
bincode = "1.3"
risc0-groth16 = "3.0.4"
ark-serialize = "0.5"
ark-bn254 = "0.5"
ark-ff = "0.5"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
[workspace]
